# rules-js-sea

./: BUILD.bazel  MODULE.bazel  cli.mjs  package.json  pnpm-lock.yaml
js_sea_binary/: BUILD.bazel  build.mjs  js_sea_binary.bzl
