load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//js_sea_binary:js_sea_binary.bzl", "js_sea_binary")

npm_link_all_packages()

js_library(
    name = "cli_lib",
    srcs = ["cli.js"],
    data = [":node_modules/chalk"],
)

js_sea_binary(
    name = "cli",
    srcs = ["cli.js"],
    data = [":node_modules/chalk"],
    entry_point = "cli.js",
)
