load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//js_sea_binary:js_sea_binary.bzl", "js_sea_binary")

npm_link_all_packages()

esbuild(
    name = "cli_bundle",
    srcs = [
        "cli.mjs",
        ":node_modules/chalk",
    ],
    entry_point = "cli.mjs",
    platform = "node",
)

js_sea_binary(
    name = "cli",
    srcs = [":cli_bundle.js"],
    data = [":node_modules/chalk"],
    entry_point = ":cli_bundle.js",
)
